<resources>
    <string name="app_name">BottleRecycle</string>
    <string name="welcome">欢迎您</string>
    <string name="starting_remind">系统正在启动，请稍侯</string>
        <string name="duanwang_chenshu">要将仓内投瓶总数清零吗？</string>
        <string name="duanwang_tishi">提示:</string>
        <string name="duwang_erweima_dialog">断网清零二维码</string>
        <string name="integration">您的积分</string>
        <string name="setBottleMaxNum">设置告警值</string>
        <string name="setAlarmHint">上限值或告警值不能为空</string>
        <string name="setAlarmSuccess">告警设置成功</string>
        <string name="setAlarmFailed">告警设置失败</string>
        <string name="setAlarmValue">设置告警</string>
        <string name="bottleLimitValue">投瓶上限值:</string>
        <string name="bottleAlarmValue">投瓶告警值:</string>
        <string name="alarmConfirm">确定</string>
        <string name="alarmCancel">取消</string>
        <string name="rebate_total">卡内余额</string>
        <string name="havenot_voucher">暂时没有免费优惠券，请按取消按钮返回上一界面</string>
        <string name="readonecard_error">读卡异常，请重新刷卡</string>
        <string name="bind_success">手机绑定请求发送成功</string>
        <string name="bind_failed">您的手机号码已经绑定一卡通，请更换号码后再试！</string>
        <string name="bind_error">数据错误，请更改后重新发送</string>
        <string name="input_phonenum_null_warning">请输入手机号码！</string>
        <string name="input_phonenum_error_warning">请输入正确的手机号码！</string>
        <string name="reselect">重选返利方式</string>
        <string name="enterphonenum_error">目前系统仅支持移动、联通、电信用户充值，请更换手机号码或重新选择返利方式！</string>
        <string name="enter_num_warning">由于不同地区各运营商对最小充值金额的规定不同，个别区域返利金额将累计达到足额后一并充入手机</string>
        <string name="commit_rebateinfo_fail_text">由于网络或者其他原因，本次充值不成功，返利金额已保存，您可以在网络顺畅时通过一卡通服务充值本次返利金额！</string>
        <string name="QRcode_rebateinfo_fail_text">本次绿纽扣学生卡返利结果已保存到绿纽扣余额！</string>
        <string name="QRcode_info_fail_text">由于网络或者其他原因，暂时无法查看绿纽扣学生卡内的金额！</string>
        <string name="recharging_text">充值时间较长，请耐心等待充值过程中切勿移动您的卡片</string>
        <string name="recharging">"充值中
请勿移动一卡通"</string>
        <string name="putbottle">投瓶</string>
        <string name="putbottle_record">投瓶记录查询</string>
        <string name="bind">立即绑定</string>
        <string name="recharge">立即充值</string>
        <string name="recharge_next">累计充值</string>
        <string name="duociqiting">多次启停设置</string>
        <string name="recharge_record">充值记录查询</string>
        <string name="consumption_record">消费记录查询</string>
        <string name="rechargeRecord">充值记录</string>
        <string name="consumptionRecord">消费记录</string>
        <string name="bind_next">下次绑定</string>
        <string name="backspace">退格</string>
        <string name="cancle">取消</string>
        <string name="sure">确定</string>
        <string name="supportrecharge_not">不支持此绿纽扣的充值功能，请与客服联系</string>
        <string name="toast_card_unuse">你的卡是不可充值状态，有异常，请与客服联系</string>
        <string name="validatecardtext">请将一卡通紧贴刷卡区!请注意，本系统仅识别北京市政交通一卡通有限公司发行的带©标识的市政交通一卡通。</string>
        <string name="validatecardwarn">请将带有$ONECARD_FLAG$标识的一卡通放在刷卡区域内</string>
        <string name="validatecardfail">由于网络或其他原因，无法验证卡的有效性！</string>
        <string name="recharge_skip_text">本次返利金额已保存您可下次一并充值</string>
        <string name="onecardbind_success_rebate">"手机绑定请求发送成功，请稍后按照手机短信操作，完成绑定！
绑定成功后可通过一卡通服务将本次投瓶金额充入您的交通卡内！"</string>
        <string name="onecardbind_success">手机绑定请求发送成功，请收到手机短信后按照短信内容进行绑定！</string>
        <string name="recharge_fail_text">由于网络或者其他原因，本次充值不成功，投瓶金额已保存，在您下次投瓶时可一并充入。</string>
        <string name="query">查询</string>
        <string name="recharge_text">盈创可充金额</string>
        <string name="recharge_phone_warning">由于不同运营商对不同区域最小充值金额不同,您的投瓶金额可能累积到手机对应的盈创帐户,下次投瓶时一并给您充值。</string>
        <string name="recharge_phone_fail_warning">本次充值金额将在24小时内充至您的手机内</string>
        <string name="recharge_commit_success">充值请求提交成功</string>
        <string name="recharged">充 值</string>
        <string name="card_in_total">卡内余额</string>
        <string name="recharge_finish_text">充值成功</string>
        <string name="moneyinsidecard">卡内余额</string>
        <string name="recharge_this">本次充值金额</string>
        <string name="balance">绿纽扣余额</string>
        <string name="rebate_this">可充金额</string>
        <string name="paper_total_weight_con">投纸总重量：</string>
        <string name="paper_totalmoney_weight_con">投纸总金额：</string>
        <string name="bottle_total_number_con">投瓶总数量：</string>
        <string name="bottle_totalmoney_weight_con">投瓶总金额：</string>
        <string name="firstrecharge_text">根据金融管制要求，首次充值需绑定手机！</string>
        <string name="recharge_warningtext">温馨提示：充值时间较长，建议您累计充值</string>
        <string name="queryqrcode">绿纽扣学生卡</string>
        <string name="queryonecard">一卡通</string>
        <string name="config_success">配置成功</string>
        <string name="select_type_error">机型配置错误，需重启程序</string>
        <string name="select_nation_error">版本配置错误，需重启程序</string>
        <string name="select_type">请选择回收机类型</string>
        <string name="select_nation">请选择回收机版本</string>
        <string name="port">Port</string>
        <string name="AcceptedFinish">您已投<big>$PUT_BOTTLE_NUM$</big>个瓶，本次还可投<big>$REMAIN_BOTTLE_NUM$</big>个瓶。</string>
        <string name="action_settings">设置</string>
        <string name="advanceBtn">高级配置</string>
        <string name="alarm_info_item_1">装瓶上限数量（停止服务）</string>
        <string name="alarm_info_item_2">收瓶告警数量（将要满）</string>
        <string name="alarm_info_item_3">收纸告警重量（将要满）</string>
        <string name="alarm_info_item_4">装纸上限重量（停止服务）</string>
        <string name="alarm_info_item_5">回收机故障</string>
        <string name="alarm_info_item_6">打印机无纸</string>
        <string name="alarm_info_item_7">打印机无响应</string>
        <string name="alarm_info_item_8">条码扫描器无响应</string>
        <string name="alarm_info_item_9">磁卡读写器没有反应</string>
        <string name="alarm_info_item_10">二维码扫描无响应</string>
        <string name="alarm_info_item_11">网络流量黄色告警（即将超标）</string>
        <string name="alarm_info_item_12">网络流量红色告警（已经超标）</string>
        <string name="alarm_info_item_13">开关门异常</string>
        <string name="alarm_info_item_14">PLC通讯异常</string>
        <string name="alarm_info_item_15">第一光电异常</string>
        <string name="alarm_info_item_16">第二光电异常</string>
        <string name="alarm_info_item_17">第三光电异常</string>
        <string name="alarm_info_item_error">异常数据</string>
        <string name="alarm_status_item_1">未恢复</string>
        <string name="alarm_status_item_2">恢复中</string>
        <string name="alarm_status_item_3">手工恢复</string>
        <string name="alarm_status_item_4">自动恢复</string>
        <string name="alarm_status_item_error">异常状态</string>
        <string name="amount">金额(元)</string>
        <string name="amount1">总数</string>
        <string name="backBtn">返回</string>
        <string name="backButton">返回</string>
        <string name="btnChannelText">维护通道</string>
        <string name="btnChineseText">中文</string>
        <string name="btnEnglishText">English</string>
        <string name="btnSpanishText">España</string>
        <string name="btnTurkyText">Türkiye</string>
        <string name="btnDutchText">Dutch</string>
        <string name="btnHindiText">हिन्दी</string>
        <string name="btnthrowBottle">点击投瓶</string>
        <string name="btnConvenienceServices">一卡通服务</string>
        <string name="btnthrowBottleOutOfService">维护中</string>
        <string name="card">请刷卡或输入您的卡号</string>
        <string name="rechargeCardFaild">由于网络或者其他原因，本次返利失败，金额已保存，具体请咨询客服</string>
        <string name="bindcard_info">输入的号码将用于盈创的转账、抽奖等各项活动，请务必输入您可用的手机号码</string>
        <string name="catacity">容量</string>
        <string name="channelLoginBtn">登录</string>
        <string name="channelLoginFail">用户名或密码错误！</string>
        <string name="channelLoginNotNull">用户名或密码不能为空！</string>
        <string name="channlOpenDoorFail">仓门开启失败！</string>
        <string name="channlOpenDoorSuccess">仓门开启成功！</string>
        <string name="cleanNumBtn">投瓶清零</string>
        <string name="cleanWeightBtn">投纸清零</string>
        <string name="clearNumFail">清零失败！</string>
        <string name="clearNumSuccess">清零完毕！</string>
        <string name="close">结束投瓶</string>
        <string name="confirm">确定</string>
        <string name="Coupon">请选择优惠劵</string>
        <string name="dboCodeButton">二维码登录</string>
        <string name="donate">爱心捐赠</string>
        <string name="dummyButton">虚拟按钮</string>
        <string name="dummyContent">虚拟内容</string>
        <string name="dwonOpenDoorBtn">开下仓门</string>
        <string name="dwonOpenPaperDoorBtn">开纸仓门</string>
        <string name="end">结束</string>
        <string name="endorGoText">瓶子数量是</string>
        <string name="enterNumber">输入您的卡号</string>
        <string name="enterPhoneNumber" />
        <string name="exitBtn">退出</string>
        <string name="finishScanBarcode">条码扫描结束</string>
        <string name="bottleSureAccept">正在回收，请稍等</string>
        <string name="ForceRecycle">正在强制回收</string>
        <string name="goBackBtn">上一页</string>
        <string name="goOrend">请选择继续投瓶或结束!</string>
        <string name="trafficcard">一卡通</string>
        <string name="phone">手机话费</string>
        <string name="greengard">卡返利</string>
        <string name="hello_world">大家好</string>
        <string name="hint">请将瓶子<b>条码向上</b>放入舱门</string>
        <string name="hintScanBarcode"><H1>投瓶</H1>"
正在扫条码，请稍等"</string>
        <string name="isprint">优惠券数量不足</string>
        <string name="loding">加载更多中...</string>
        <string name="loding_loding">加载中...</string>
        <string name="loding_more">更多</string>
        <string name="loding_on">松开可以刷新</string>
        <string name="loding_on_down">下拉可以刷新</string>
        <string name="loding_time">更新于：</string>
        <string name="maintainGard">维护通道</string>
        <string name="milliliter">0-500ml</string>
        <string name="netCfgBtn">参数配置</string>
        <string name="serCfgBtn">服务配置</string>
        <string name="faultDiagnosis">故障诊断</string>
        <string name="cancelTiming">取消定时开关机</string>
        <string name="netWorkTestBtn">网络测试</string>
        <string name="netWorkTestDateTimeText">时间(秒)</string>
        <string name="netWorkTestInfoText">描述</string>
        <string name="operDataInfoText">返利方式</string>
        <string name="operDataStaffText">投瓶/投纸(个/千克)</string>
        <string name="operDataTopText">本地操作记录</string>
        <string name="OperDateTimeText">操作时间</string>
        <string name="operDataTypeText">回收类型</string>
        <string name="tester">测试人员</string>
        <string name="terminal_no">终端编号</string>
        <string name="set_terminal_no">设定终端编号</string>
        <string name="automatic_detection">自动检测</string>
        <string name="throw_bottles_of_test">投瓶测试</string>
        <string name="Detection_to_open_door">开门检测</string>
        <string name="Detection_to_close_door">关门检测</string>
        <string name="conveyor_forward">传送带前进</string>
        <string name="conveyor_back">传送带后退</string>
        <string name="first_photoelectric">检测第一光电</string>
        <string name="second_photoelectric">检测第二光电</string>
        <string name="third_photoelectric">检测第三光电</string>
        <string name="printer1_test">打印机1检测</string>
        <string name="printer2_test">打印机2检测</string>
        <string name="pass">通过</string>
        <string name="not_through">未通过</string>
        <string name="read_barcode_test">读条码测试</string>
        <string name="turn_on_the_door_lamp">检测门灯打开</string>
        <string name="door_lights_flashing">检测门灯闪烁</string>
        <string name="door_lamp_closed">检测门灯关闭</string>
        <string name="camera_light_open">摄像头灯开</string>
        <string name="camera_light_closed">摄像头灯关</string>
        <string name="ICcard_read_test">一卡通读卡测试</string>
        <string name="camera_test">摄像头测试</string>
        <string name="equipment_connected_listing">设备连接清单</string>
        <string name="result">结果</string>
        <string name="weigh_read">重量检测</string>
        <string name="Detection_sort_to_pet">分选到瓶</string>
        <string name="Detection_sort_to_can">分选到罐</string>
</resources>