<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/operDatalayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        style="@style/blue_bg_shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0px"
        android:gravity="center"
        android:text="@string/operDataTopText"
        android:textColor="@color/white"
        android:textSize="@dimen/linear_left_top_textsize"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0px"
        android:layout_marginRight="10.0px"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0.0px"
                android:layout_height="30.0px"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/OperDateTimeText"
                android:textColor="@color/white"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="0.0px"
                android:layout_height="30.0px"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/operDataInfoText"
                android:textColor="@color/white"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="0.0px"
                android:layout_height="30.0px"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/operDataTypeText"
                android:textColor="@color/white"
                android:textSize="12.0sp" />

            <TextView
                android:layout_width="0.0px"
                android:layout_height="30.0px"
                android:layout_weight="2.0"
                android:gravity="center"
                android:text="@string/operDataStaffText"
                android:textColor="@color/white"
                android:textSize="12.0sp" />
        </LinearLayout>

        <com.incomrecycle.prms.rvm.gui.activity.channel.PullDownView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pull_down_operdata_list_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>